--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 @font-face {
-	font-family: 'Conv_Gobold Regular Italic';
-	src: url('./fonts/fonts/Gobold Regular Italic.woff');
-	src: local('☺'), url('./fonts/fonts/Gobold Regular Italic.woff') format('woff'), url('fonts/Gobold Regular Italic.ttf') format('truetype'), url('fonts/Gobold Regular Italic.svg') format('svg');
+	font-family: 'Gobold';
+	src: url('./fonts/fonts/Gobold\ Regular\ Italic.eot');
+	src: local('☺'), url('./fonts/fonts/Gobold\ Regular\ Italic.woff') format('woff'), url('./fonts//fonts/Gobold\ Regular\ Italic.ttf') format('truetype'), url('./fonts/fonts/Gobold\ Regular\ Italic.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
-
 
 
 .img-link {
@@ -28,7 +27,7 @@
 .info h2,
 .info h3 {
   margin: 10px 0;
-  font-family: 'Conv_Gobold Regular Italic', sans-serif;
+  font-family: 'Gobold', sans-serif;
 }
 .info h1 {
   font-size: 46px;
